# MindOpsOS-Entegrasyon

./: .gitignore  README.md  pyproject.toml  requirements.txt
.bmad-project/: PROJECT_CONTEXT.md
.bmad-project/memory/: project-state.md
apps/api/: .dockerignore  Dockerfile  main.py  requirements.txt
config/: .env.example
docs/: DemoSummerBase.postman_collection.json  StopSale.postman_collection.json  sedna-api-analysis.md
docs/analysis/: e6-frontend-integration-analysis.md
docs/architecture/: e13-advanced-email-integration.md  e2-sedna-sync-dashboard.md  e3-sedna-stopsale-integration.md  e4-hotel-fuzzy-match.md  e5-sedna-api-auth-fix.md  e6-ai-email-classification.md  e7-ai-frontend-integration.md  main-architecture.md
docs/guides/: email-oauth-setup-guide.md
docs/prd/: e13-advanced-email-integration.md  e2-sedna-sync-dashboard.md  e3-sedna-stopsale-integration.md  e4-hotel-fuzzy-match.md  e5-sedna-api-auth-fix.md  e6-ai-email-classification.md  e7-ai-frontend-integration.md  main-prd.md
docs/stories/: E1-S1.database-schema.md  E1-S1.project-setup.md  E1-S2.registration.md  E1-S3.sedna-client.md  E10-S1.health-check.md  E11-S1.processing-history-page.md  E12-S1.processing-logs-migration.md  (+23 more)
k8s/: deployment.yaml
migrations/: 001_create_tenants.sql  002_create_users.sql  003_create_tenant_settings.sql  004_create_sessions.sql  005_add_tenant_id_to_existing.sql  20251228_001_processing_logs.sql
scripts/: test_pop3.py
src/: __init__.py  config.py  main.py
tests/: conftest.py  test_email_service.py  test_parsers.py  test_sedna_client.py
(+75 files in other folders)
